--- a/nerve/tools/body.j2
+++ b/nerve/tools/body.j2
@@ -35,14 +35,19 @@ def {{ tool.name }}({% for arg in tool.arguments %}{{ arg.name }}: Annotated[str
 
     exit_code = proc.close() or 0
 
+{% if tool.log %}
+    if ret and exit_code == 0:
+        logger.success(ret)
+    elif ret:
+        logger.error(ret)
+{% endif %}
+
 {% endif %}
 
 {% if tool.complete_task %}
     if exit_code == 0:
         # if the tool is set to complete the task, set the task as complete
         state.set_task_complete({'reason': {k:v for k, v in locals().items() if type(v) == str}})
-    else:
-        logger.warning(f"📊 tool {{ tool.name }} failed with exit code {exit_code}: {ret}")
 {% endif %}
 
     # return the result of the tool call
