--- a/nerve/tools/body.j2
+++ b/nerve/tools/body.j2
@@ -6,7 +6,7 @@ from loguru import logger
 
 import nerve.runtime.state as state
 
-{% set func_ret_type = "Any" %}
+{% set func_ret_type = "Any | None" %}
 {% if tool.tool is none %}
 {% set func_ret_type = "None" %}
 {% endif %}
@@ -51,4 +51,4 @@ def {{ tool.name }}({% for arg in tool.arguments %}{{ arg.name }}: Annotated[str
 {% endif %}
 
     # return the result of the tool call
-    return ret
+    return ret if len(ret) > 0 else None
